# knowledge

./: README.md
document_page/i18n/: document_page.pot
setup/_metapackage/: pyproject.toml
